2005-03-23  Alan Modra  <amodra@bigpond.net.au>

	* ld-elf/tbss.s: Don't start directives in first column.
	* ld-scripts/weak1.s: Likewise.
	* ld-scripts/weak2.s: Likewise.
	* ld-undefined/weak-undef.s: Likewise.
	* ld-undefined/undefined.exp: Enable tests for hppa-elf.

2005-03-16  David Heine  <dlheine@tensilica.com>
	    Bob Wilson  <bob.wilson@acm.org>

	* ld-scripts/empty-orphan.d, ld-scripts/empty-orphan.exp,
	ld-scripts/empty-orphan.s, ld-scripts/emtpy-orphan.t: New test.

2005-03-16  Alan Modra  <amodra@bigpond.net.au>

	* ld-powerpc/tlsexe32.d: Update.
	* ld-powerpc/tlsexe32.g: Update.
	* ld-powerpc/tlsexe32.r: Update.
	* ld-powerpc/tlsexe32.t: Update.
	* ld-powerpc/tlsso32.d: Update.
	* ld-powerpc/tlsso32.g: Update.
	* ld-powerpc/tlsso32.r: Update.
	* ld-powerpc/tlsso32.t: Update.

2005-03-08  Hans-Peter Nilsson  <hp@axis.com>

	Adjust testsuite for cris-axis-aout.
	* ld-cris/noglob1.d: Adjust regexp for a.out output.
	* ld-cris/badgotr1.d, ld-cris/expdyn1.d, ld-cris/expdyn2.d,
	ld-cris/expdyn3.d, ld-cris/expdyn4.d, ld-cris/expdyn5.d,
	ld-cris/expdyn6.d, ld-cris/expdyn7.d, ld-cris/gotplt1.d,
	ld-cris/gotplt2.d, ld-cris/gotplt3.d, ld-cris/hiddef1.d,
	ld-cris/libdso-1.d, ld-cris/libdso-10.d, ld-cris/libdso-11.d,
	ld-cris/libdso-12.d, ld-cris/libdso-13.d, ld-cris/libdso-14.d,
	ld-cris/libdso-2.d, ld-cris/libdso-3.d, ld-cris/libdso-4.d,
	ld-cris/locref1.d, ld-cris/locref2.d, ld-cris/nodyn4.d,
	ld-cris/nodyn5.d, ld-cris/pv32-1.d, ld-cris/undef1.d,
	ld-cris/weakref1.d: ld-cris/weakref2.d: Pass --em=criself to gas.
	* ld-cris/v10-v32.d, ld-cris/v10-va.d, ld-cris/v32-ba-1.d,
	ld-cris/v32-v10.d, ld-cris/v32-va.d, ld-cris/va-v10.d,
	ld-cris/va-v32.d: Ditto.  Pass -m criself to gld.
	* ld-cris/v32-bin-1.d: Pass -m criself to gld.

2005-03-05  Alan Modra  <amodra@bigpond.net.au>

	* ld-alpha/tlsbin.dd: Update to suit changed section layout and
	removed section symbols.
	* ld-alpha/tlsbin.rd: Likewise.
	* ld-alpha/tlsbin.sd: Likewise.
	* ld-alpha/tlsbinr.dd: Likewise.