@@ -1,12 +1,10 @@
 # Basic expect script for LD Regression Tests
-#   Copyright 1993, 1994, 1995, 1997, 1998, 1999, 2001, 2003, 2005, 2007, 2009
-#   2011, 2012 Free Software Foundation, Inc.
-#
-# This file is part of the GNU Binutils.
+#   Copyright 1993, 1994, 1995, 1997, 1998, 1999, 2001, 2003
+#   Free Software Foundation, Inc.
 #
 # This file is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
-# the Free Software Foundation; either version 3 of the License, or
+# the Free Software Foundation; either version 2 of the License, or
 # (at your option) any later version.
 # 
 # This program is distributed in the hope that it will be useful,
@@ -16,8 +14,7 @@
 # 
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
-# Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston,
-# MA 02110-1301, USA.
+# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 #
 # Written by Jeffrey Wheat (cassidy@cygnus.com)
 #
@@ -50,7 +47,9 @@ if ![info exists strip] then {
     set strip [findfile $base_dir/../binutils/strip-new $base_dir/../binutils/strip-new [transform strip]]
 }
 
-remote_exec host "mkdir -p tmpdir"
+if {![file isdirectory tmpdir]} then {
+    catch "exec mkdir tmpdir" status
+}
 
 # Make a symlink from tmpdir/as to the assembler in the build tree, so
 # that we can use a -B option to gcc to force it to use the newly
@@ -67,7 +66,6 @@ set gcc_gas_flag "-B[pwd]/tmpdir/gas/"
 if {![file isdirectory tmpdir/ld]} then {
     catch "exec mkdir tmpdir/ld" status
     catch "exec ln -s ../../ld-new tmpdir/ld/ld" status
-    catch "exec ln -s ld tmpdir/ld/collect-ld" status
 }
 set gcc_ld_flag "-B[pwd]/tmpdir/ld/"
 
@@ -80,9 +78,9 @@ if {[file exists tmpdir/libpath.exp]} {
     }
 }
 
-# The "make check" target in the Makefile passes in
-# "CC=$(CC_FOR_TARGET)".  But, if the user invokes runtest directly
-# (as when testing an installed linker), these flags may not be set.  
+# "CC=$(CC_FOR_TARGET)", and other similar parameters.  But, if the
+# user invokes runtest directly (as when testing an installed linker),
+# these flags may not be set.
 if {![info exists CC]} {
     set CC [find_gcc]
 }
@@ -116,17 +114,9 @@ proc get_link_files {varname} {
     global srcdir
     global CC
     if ![info exists $varname] {
-	#configure.host returns variables that can be substituted into
-	#makefile rules, with embedded shell variable expansions.
-	#make wants $$shell_var, we want $shell_var ...
-	set cmd "host='$target_triplet' && . $srcdir/../configure.host && sed -e 's,\\\$\\\$,\$,g' <<EOF\n\$$varname\nEOF"
-	set status [catch "exec sh -c [list $cmd]" result]
-	if $status { error "Error getting native link files: $result" }
-	set cmd "CC='$CC' && eval echo \"$result\""
-	set status [catch "exec sh -c [list $cmd]" result]
+	set status [catch "exec sh -c \"host='$target_triplet' && CC='$CC' && . $srcdir/../configure.host && eval echo \\$$varname\"" result]
 	if $status { error "Error getting native link files: $result" }
 	set $varname $result
-	send_log "$varname = $result\n"
     }
 }
 
@@ -139,11 +129,11 @@ proc get_target_emul {} {
 }
 
 if [isnative] {
-    foreach x {HOSTING_CRT0 HOSTING_SCRT0 HOSTING_LIBS} {
+    foreach x {HOSTING_CRT0 HOSTING_LIBS} {
 	get_link_files $x
     }
 } else {
-    foreach x {HOSTING_CRT0 HOSTING_SCRT0 HOSTING_LIBS} { set $x "" }
+    foreach x {HOSTING_CRT0 HOSTING_LIBS} { set $x "" }
 }
 if ![info exists HOSTING_EMU] { set HOSTING_EMU "-m [get_target_emul]" }
 
@@ -206,15 +196,7 @@ proc ld_compile { cc source object } {
 #	assemble a file
 #
 proc ld_assemble { as source object } {
-	default_ld_assemble $as "" $source $object 
-}
-
-#
-# ld_assemble_flags
-#	assemble a file with extra flags
-#
-proc ld_assemble_flags { as flags source object } {
-	default_ld_assemble $as $flags $source $object 
+	default_ld_assemble $as $source $object 
 }
 
 #
