@@ -1,3 +1,12 @@
+2005-03-24  Mark Mitchell  <mark@codesourcery.com>
+
+	* config/default.exp: Do not load libpath.exp if it does not
+	exist.
+	(CC): Provide fallback definition.
+	(CFLAGS): Likewise.
+	(CXX): Likewise.
+	(CXXFLAGS): Likewise.
+	
 2005-03-23  Alan Modra  <amodra@bigpond.net.au>
 
 	* ld-elf/tbss.s: Don't start directives in first column.
